add importing of packages

--- a/lecture.tex
+++ b/lecture.tex
@@ -1,5 +1,9 @@
 \documentclass{beamer}
 
+\usepackage{mathpartir}
+\usepackage{hyperref}
+\usepackage{mathtools}
+
 \title{Proof Strategies}
 \author{Group 9 From Outer Space}
 \date{17 November 2022}
