--- a/intro.tex
+++ b/intro.tex
@@ -12,9 +12,14 @@
       } 
     \textsc{\ \ ImpElim}
 
+
     \inferrule
       {
-        \phi \vdash \psi
+        \phi
+        \\\\
+        \vdots
+        \\\\
+        \psi
       } 
       {
         \phi \rightarrow \psi
