Add proof by cases

--- a/lecture.tex
+++ b/lecture.tex
@@ -3,6 +3,10 @@
 \usepackage{mathpartir}
 \usepackage{hyperref}
 \usepackage{mathtools}
+\usepackage{amsthm}
+
+\newcommand{\refl}{\textcolor{blue}{Reflection:~}}
+\newtheorem*{prop}{Proposition}
 
 \title{Proof Strategies}
 \author{Group 9 From Outer Space}
