--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-  \frametitle{Implication and Negation: Rules}
+  \frametitle{Basic inference: implication and negation}
   
   \begin{itemize}
     \item Implication: \(P \rightarrow Q\), i.e. "if P then Q"
@@ -62,7 +62,7 @@
 
 
 \begin{frame}
-  \frametitle{Conjunction and Disjunction}
+  \frametitle{Basic inference: conjunction and disjunction}
 
   \begin{itemize}
     \item Conjunction: \(P \wedge Q\), i.e. "P and Q"
@@ -139,7 +139,7 @@
 
 
 \begin{frame}
-  \frametitle{Universal and Existential}
+  \frametitle{Basic inference: universal and existential}
 
   \begin{itemize}
     \item Universal: \(\forall x . P(x)\), i.e. "for all x, P(x)"
@@ -198,17 +198,17 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Exercises}
+  \frametitle{Basic inference: exercises}
 
-  Match each phrase with one or more inference rules
+  Match each phrase with one or more inference rules:
   \begin{enumerate}
-    \item Life is beautiful, so either life is beautiful or pigs fly    
-    \item Obviously pigs don't fly, so if pigs fly then I'll pay you one bitcoin     
-    \item given that the earth is flat, we can deduce that we can fall off the planet, so if the earth is flat then we can fall off the planet.
-    \item Austin is a city in Texas, so there's a city in Texas
-    \item All texans like BBQ and some texans are vegan, so even vegans like BBQ 
-    \item There's a dog in the yard, let's call it Fido; so Fido is in the yard. 
-
+    \item Life is beautiful, so either life is beautiful or pigs fly.
+    \item Obviously pigs don't fly, so if pigs fly then I'll give you a bitcoin for a pickle. 
+    \item Given that they're a PhD student, you can deduce that they are tired and stressed.     
+    Thus if they're a PhD student, then they're tired and stressed.
+    \item Austin is a city in Texas, so there's a city in Texas.
+    \item All texans like BBQ and some texans are vegan, so even vegans like BBQ.
+    \item There's a dog in the yard; let's call it Fido; so Fido is in the yard. 
   \end{enumerate}
 \end{frame}
 
