Clarify cases proof

--- a/cases.tex
+++ b/cases.tex
@@ -28,9 +28,10 @@
   \begin{proof}
     By cases on the evenness of $n$.
 
-    If $n$ is even, then $n^2$ is even and hence $n^2 +n$ is even.
+    If $n$ is even, then $n^2$ is also even and hence so is $n^2 +n$.
 
-    If $n$ is odd, then $n^2$ is odd and hence $n^2 +n$ is even.
+    If $n$ is not even, then $n$ is odd.  This means $n^2$ is also odd
+    and hence $n^2 +n$ is even.
   \end{proof}
   \qquad\\
   \refl Think of how you might prove this proposition without
