--- a/intro.tex
+++ b/intro.tex
@@ -5,6 +5,7 @@
   \begin{itemize}
     \item An inference rule is a logical step of reasoning
     \item An inference rule says "from P, we can deduce Q" 
+    \item Or in other words: "Q, under the assumption of P" 
     \item Some common notations 
     \begin{mathpar}
       P \vdash Q
@@ -35,7 +36,7 @@
   
   \begin{itemize}
     \item A proof is a combination of inference rules  
-    \item A proof of \(P \vdash Q\), i.e. "Q under the assumption of P": 
+    \item A proof of \(P \vdash Q\), i.e. "Q, under the assumption of P": 
     \begin{mathpar}
       \inferrule
         {
