--- a/intro.tex
+++ b/intro.tex
@@ -15,15 +15,12 @@
       P \Longrightarrow Q
     \end{mathpar}
 
-    \item from \(9 + x^2 = 25\), we can deduce \(b = 4\)
-    \begin{mathpar}
-      9 + x^2 = 25 \vdash |x| = 4
 
+    \item example: "from \(9 + x^2 = 25\), we can deduce \(x = 4\)"
+    \begin{mathpar}
       \inferrule 
         {9 + x^2 = 25} 
         {|x| = 4}
-
-      9 + x^2 = 25 \Longrightarrow |x| = 4
     \end{mathpar}
   \end{itemize}
 
