Improve cases exercise

--- a/cases.tex
+++ b/cases.tex
@@ -83,5 +83,6 @@
     \end{itemize}
     \qquad\\\qquad\\
   \end{itemize}
-  \refl Come up with your own proposition and prove it by cases
+  \exer Prove the following by cases:\\For any function
+  $f:\textsf{bool}\rightarrow\textsf{bool}$, $f(f(f(b))) = f(b)$.
 \end{frame}
