--- a/lecture.tex
+++ b/lecture.tex
@@ -6,6 +6,7 @@
 \usepackage{amsthm}
 
 \newcommand{\refl}{\textcolor{blue}{Reflection:~}}
+\newcommand{\exer}{\textcolor{blue}{Exercise:~}}
 \newtheorem*{prop}{Proposition}
 
 \title{Proof Strategies}
