Add intro materials

--- a/lecture.tex
+++ b/lecture.tex
@@ -19,6 +19,37 @@
   \titlepage
 \end{frame}
 
+\begin{frame}
+  \frametitle{Overview}
+  \begin{itemize}
+  \item Introduction\\
+  \item Basic inference\\
+  \item Proof strategies
+    \begin{itemize}
+    \item Direct proof
+    \item Proof by cases
+    \item Proof by contrapositive\\
+    \end{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Introduction}
+  \begin{itemize}
+  \item A mathematical proof is a sound argument that a certain
+    conclusion logically follows from stated hypotheses\\
+  \item Proofs enable us to synthesize new truths from old ones\\
+  \item Proofs can be more or less formal, depending on the intended
+    audience
+    \begin{itemize}
+    \item Less formal: human readers
+    \item More formal: machine readers\\
+    \end{itemize}
+  \item \textcolor{blue}{This lecture:} Some basic strategies for
+    structuring correct informal proofs
+  \end{itemize}
+\end{frame}
+
 \include{intro}
 \include{direct}
 \include{cases}
