--- a/contrap.tex
+++ b/contrap.tex
@@ -1,34 +1,27 @@
 \begin{frame}
-  \frametitle{Another helpful method: contrapositive}
+  \frametitle{Proof by contrapositive}
 
   \begin{itemize}
-  \item Our very basic simple problem asks us to prove $P
-    \longrightarrow Q$
-  \item However, sometimes a straightforward direct proof can be
-    really annoying
-  \item Proving the \textbf{contrapositive} might be easier
+  \item Sometimes a direct proof of $P\rightarrow Q$ can be really
+    annoying
+  \item Proving the \textbf{contrapositive} $\neg Q\rightarrow \neg P$
+    might be easier
+  \item We can always opt to do this because
+    \begin{mathpar}
+      (P\rightarrow Q)\equiv (\neg Q \longrightarrow \neg P)
+    \end{mathpar}
   \end{itemize}
 
-  \begin{mathpar}
-    \neg Q \longrightarrow \neg P
-  \end{mathpar}
-
-
-\end{frame}
-
-\begin{frame}
-  \frametitle{Make some contrapositive statements!}
-
-  What is the contrapositive of these claims?
+  \exer What is the contrapositive of these claims?
   \begin{itemize}
   \item If today is Tuesday, then we have class today.
-  \item If it's a cat, then it does not bark.
+  \item If this is a cat, then it does not bark.
   \end{itemize}
-
+  
 \end{frame}
 
 \begin{frame}
-  \frametitle{An actual example}
+  \frametitle{Proof by contrapositive: Example}
 
   \begin{prop}
     If $r$ is an irrational number, then $\sqrt{r}$ is also an
