--- a/lecture.tex
+++ b/lecture.tex
@@ -30,6 +30,7 @@
     \item Proof by cases
     \item Proof by contrapositive\\
     \end{itemize}
+  \item Conclusion
   \end{itemize}
 \end{frame}
 
@@ -38,7 +39,8 @@
   \begin{itemize}
   \item A mathematical proof is a sound argument that a certain
     conclusion logically follows from stated hypotheses\\
-  \item Proofs enable us to synthesize new truths from old ones\\
+  \item Proofs enable us to synthesize new true statements from old
+    ones\\
   \item Proofs can be more or less formal, depending on the intended
     audience
     \begin{itemize}
@@ -54,5 +56,24 @@
 \include{direct}
 \include{cases}
 \include{contrap}
+
+\begin{frame}
+  \frametitle{Conclusion}
+  \begin{itemize}
+  \item These are far from the only proof strategies!
+    \begin{itemize}
+    \item Proof by contradiction, induction, domain-specific
+      strategies
+    \end{itemize}
+    \qquad\\
+  \item Induction is a fundamental proof strategy in many areas of
+    computer science\\
+  \item \textcolor{blue}{Next lecture:} Proof by induction
+  \end{itemize}
+  \qquad\\\qquad\\
+  
+  \exer Try to prove the following proposition using all three
+  strategies discussed here: for all integers $m$, $2m^2-1$ is odd.
+\end{frame}
 
 \end{document}
