Standardize slide titles

--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-  \frametitle{Basic inference: introduction}
+  \frametitle{Basic inference: Introduction}
   
   
   \begin{itemize}
@@ -28,7 +28,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Basic inference: proof}
+  \frametitle{Basic inference: Proof}
   
   
   \begin{itemize}
@@ -53,7 +53,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Basic inference: implication and negation}
+  \frametitle{Basic inference: Implication and negation}
   
   \begin{itemize}
     \item Implication: \(P \rightarrow Q\), i.e. "if P then Q"
@@ -116,7 +116,7 @@
 
 
 \begin{frame}
-  \frametitle{Basic inference: conjunction and disjunction}
+  \frametitle{Basic inference: Conjunction and disjunction}
 
   \begin{itemize}
     \item Conjunction: \(P \wedge Q\), i.e. "P and Q"
@@ -193,7 +193,7 @@
 
 
 \begin{frame}
-  \frametitle{Basic inference: universal and existential}
+  \frametitle{Basic inference: Universal and existential}
 
   \begin{itemize}
     \item Universal: \(\forall x . P(x)\), i.e. "for all x, P(x)"
@@ -252,17 +252,17 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Basic inference: exercises}
+  \frametitle{Basic inference: Exercises}
 
   Match each phrase with one or more inference rules:
   \begin{enumerate}
     \item Life is beautiful, so either life is beautiful or pigs fly.
     \item Obviously pigs don't fly, so if pigs fly then I'll give you a bitcoin for a pickle. 
     \item Given that they're a PhD student, you can deduce that they are tired and stressed.     
-    Thus if they're a PhD student, then they're tired and stressed.
+    Thus, if they're a PhD student, then they're tired and stressed.
     \item Austin is a city in Texas, so there's a city in Texas.
-    \item All texans like BBQ and some texans are vegan, so even vegans like BBQ.
-    \item There's a dog in the yard; let's call it Fido; so Fido is in the yard. 
+    \item All Texans like BBQ and some Texans are vegan, so even vegans like BBQ.
+    \item There's a dog in the yard; let's call it Fido.  So Fido is in the yard. 
   \end{enumerate}
 \end{frame}
 
